# flow-bc

./: .gitignore  .swp  README.md  bc.py  main.py  model.py  nn_utils.py  old_test.py  old_train.py  policy.py  pyproject.toml  test.py  train.py
ablation/: euler_steps.py
config/: halfcheetah_gaussian_baseline.yaml
config/ant/: flow_matching.yaml  gaussian_baseline.yaml
config/door/: flow_matching.yaml  gaussian_baseline.yaml
config/halfcheetah/: flow_matching.yaml  gaussian_baseline.yaml
config/hopper/: flow_matching.yaml  gaussian_baseline.yaml
config/humanoid/: flow_matching.yaml  gaussian_baseline.yaml
config/kitchen/: flow_matching.yaml  gaussian_baseline.yaml
config/pusher/: flow_matching.yaml  gaussian_baseline.yaml
config/swimmer/: flow_matching.yaml  gaussian_baseline.yaml
config/walker2d/: flow_matching.yaml  gaussian_baseline.yaml
weights/ant/: flow-matching.pt  gaussian_baseline.pt
weights/door/: gaussian_baseline.pt
weights/halfcheetah/: flow-matching.pt  gaussian_baseline.pt
weights/hopper/: flow-matching.pt  gaussian_baseline.pt
weights/humanoid/: flow-matching.pt  gaussian_baseline.pt
weights/kitchen/: gaussian_baseline.pt
weights/old/: bc_gaussian_halfcheetah.pt  flow_halfcheetah.pt
weights/pusher/: flow-matching.pt  gaussian_baseline.pt
weights/swimmer/: flow-matching.pt  gaussian_baseline.pt
weights/walker2d/: flow-matching.pt  gaussian_baseline.pt
