[project]
name = "flow-bc"
version = "0.1.0"
description = "Behavioral cloning."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "gymnasium[mujoco,other]>=1.2.3",
    "minari[all]>=0.5.3",
    "mujoco==3.2.3",
    "pyimage>=0.1.1",
    "torch>=2.10.0",
    "torchdiffeq>=0.2.5",
    "tqdm>=4.67.3",
    "wandb>=0.25.0",
]
